...
                                Text(service.serviceName)
                                    .foregroundColor(.white)
                                    .font(.title)
                                    .fontWeight(.black)
                                    .multilineTextAlignment(.center)
                                    .padding(/*@START_MENU_TOKEN@*/.all/*@END_MENU_TOKEN@*/)
                                    .accessibility(identifier: "serviceNameText")
                                
                                Link(destination: URL(string: service.serviceLink)!, label: {Text("View More Information Online")
                                        .underline()
                                        .font(.headline)
                                        .foregroundColor(Color.white)
                                        .padding()
...
