...
                                Text(event.eventName)
                                    .foregroundColor(.white)
                                    .font(.title)
                                    .fontWeight(.black)
                                    .multilineTextAlignment(.center)
                                    .padding(/*@START_MENU_TOKEN@*/.all/*@END_MENU_TOKEN@*/)
                                    .accessibility(identifier: "eventNameText")
                                    
                                VStack{
                                    ForEach(event.details, id: \.self){ detail in
                                        Text(detail)
                                            .foregroundColor(.white)
                                            .padding()
...
